getting images from web

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h1>Penguins (WASD + Space)</h1>
+    <h1>Penguins (WASD)</h1>
+    <h2>Fish eaten: <span class="fishcounter">0</span></h2>
     <div class="gamebox">
         <ul class="statlist">
             <li class="stat1"><span class=type></span><span class=value></span></li>
@@ -26,13 +27,19 @@
         </ul>
         <div class="canvasflexbox">
             <canvas width="800" height="600">
-
-
             </canvas>
         </div>
     </div>
-    <img src="img\testpenguin.png" alt="" class="penguin">
-    <img src="img\testfish.png" alt="" class="fish">
+    <img src="https://www.freeiconspng.com/uploads/penguin-png-5.png" alt="" class="penguin">
+    <img src="https://www.freeiconspng.com/uploads/fish-png-16.png" alt="" class="fish">
+
+    <div class="sources">
+        <h3>Image Sources:</h3>
+        <a href="https://www.freeiconspng.com/img/19539">Penguin Png Image Best Collections</a>
+        <br>
+        <a href="https://www.freeiconspng.com/img/26344">Picture Fish Download</a>
+    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
