--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             <li class="stat9"><span class=type></span><span class=value></span></li>
             <li class="stat10"><span class=type></span><span class=value></span></li>
         </ul>
+
         <div class="canvasflexbox">
+            <div class="pausemenu">
+                <h2 class="gamepaused">Game Paused</h2>
+                <button class="pausebutton">Continue</button>
+
+            </div>
             <canvas width="800" height="600">
             </canvas>
         </div>
