--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Penguins (WASD)</h1>
+    <h1>Penguins! (WASD)</h1>
     <h2>Fish eaten: <span class="fishcounter">0</span></h2>
     <div class="gamebox">
         <ul class="statlist">
@@ -38,12 +38,16 @@
     </div>
     <img src="https://www.freeiconspng.com/uploads/penguin-png-5.png" alt="" class="penguin">
     <img src="https://www.freeiconspng.com/uploads/fish-png-16.png" alt="" class="fish">
+    <img src="https://www.freeiconspng.com/uploads/animal-shark-png-6.png" alt="" class="shark">
+
 
     <div class="sources">
         <h3>Image Sources:</h3>
         <a href="https://www.freeiconspng.com/img/19539">Penguin Png Image Best Collections</a>
         <br>
         <a href="https://www.freeiconspng.com/img/26344">Picture Fish Download</a>
+        <br>
+        <a href="https://www.freeiconspng.com/img/42733">Png Shark Transparent Background Hd</a>
     </div>
 
 
