prettier pause menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Penguins! (WASD)</h1>
+    
     <h2>Fish eaten: <span class="fishcounter">0</span></h2>
     <div class="gamebox">
         <ul class="statlist">
@@ -28,8 +28,10 @@
 
         <div class="canvasflexbox">
             <div class="pausemenu">
-                <h2 class="gamepaused">Game Paused</h2>
-                <button class="pausebutton">Continue</button>
+                <h1>Penguins!</h1>
+                <h2>use WASD to hunt tasty fish!</h3>
+                <!-- <h3 class="gamepaused">Game Paused</h3> -->
+                <button class="pausebutton">Start</button>
 
             </div>
             <canvas width="800" height="600">
