--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 
 <body>
     
-    <h2>Fish eaten: <span class="fishcounter">0</span></h2>
+    <h2>Fish eaten: <span class="fishcounter" id="fishcounter">0</span></h2>
     <div class="gamebox">
         <ul class="statlist">
-            <li class="stat1"><span class=type></span><span class=value></span></li>
-            <li class="stat2"><span class=type></span><span class=value></span></li>
-            <li class="stat3"><span class=type></span><span class=value></span></li>
-            <li class="stat4"><span class=type></span><span class=value></span></li>
-            <li class="stat5"><span class=type></span><span class=value></span></li>
-            <li class="stat6"><span class=type></span><span class=value></span></li>
-            <li class="stat7"><span class=type></span><span class=value></span></li>
-            <li class="stat8"><span class=type></span><span class=value></span></li>
-            <li class="stat9"><span class=type></span><span class=value></span></li>
-            <li class="stat10"><span class=type></span><span class=value></span></li>
+            <li class="stat1"><span class=type id=type1></span><span class=value id=value1></span></li>
+            <li class="stat2"><span class=type id=type2></span><span class=value id=value2></span></li>
+            <li class="stat3"><span class=type id=type3></span><span class=value id=value3></span></li>
+            <li class="stat4"><span class=type id=type4></span><span class=value id=value4></span></li>
+            <li class="stat5"><span class=type id=type5></span><span class=value id=value5></span></li>
+            <li class="stat6"><span class=type id=type6></span><span class=value id=value6></span></li>
+            <li class="stat7"><span class=type id=type7></span><span class=value id=value7></span></li>
+            <li class="stat8"><span class=type id=type8></span><span class=value id=value8></span></li>
+            <li class="stat9"><span class=type id=type9></span><span class=value id=value9></span></li>
+            <li class="stat10"><span class=type id=type10></span><span class=value id=value10></span></li>
         </ul>
 
         <div class="canvasflexbox">
             <div class="pausemenu">
-                <h1>Penguins!</h1>
-                <h2>use WASD to hunt tasty fish!</h3>
+                <h1 id="menuline1">Penguins!</h1>
+                <h2 id="menuline2">use WASD to hunt tasty fish!</h3>
                 <!-- <h3 class="gamepaused">Game Paused</h3> -->
                 <button class="pausebutton">Start</button>
 
@@ -54,8 +54,8 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="http://code.jquery.com/color/jquery.color-2.1.2.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="http://code.jquery.com/color/jquery.color-2.1.2.min.js"></script> -->
     <script src="classes.js"></script>
     <script src="index.js"></script>
 </body>
