--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     </div>
 
     <script src="classes.js"></script>
+    <script src="levels.js"></script>
     <script src="index.js"></script>
+    
 </body>
 
 </html>
