--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <a href="https://www.freeiconspng.com/img/42733">Png Shark Transparent Background Hd</a>
     </div>
 
-    <script src="classes.js"></script>
+    <script src="gameObjects.js"></script>
     <script src="levels.js"></script>
-    <script src="index.js"></script>
+    <script src="main.js"></script>
     
 </body>
 
