separated engine and specific game

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         <a href="https://www.freeiconspng.com/img/42733">Png Shark Transparent Background Hd</a>
     </div>
 
-    <script src="gameObjects.js"></script>
-    <script src="levels.js"></script>
-    <script src="main.js"></script>
+    <script src="engine\gameObjects.js"></script>
+    <script src="engine\level.js"></script>
+    <script src="engine\main.js"></script>
+    <script src="penguins\penguinlevel.js"></script>
+    <script src="penguins\penguinobjects.js"></script>
     
 </body>
 
