--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script src="engine\main.js"></script>
     <script src="penguins\penguinlevel.js"></script>
     <script src="penguins\penguinobjects.js"></script>
-    
+    <script src="penguins\main.js"></script>
 </body>
 
 </html>
