--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="engine\gameObjects.js"></script>
     <script src="engine\level.js"></script>
     <script src="engine\main.js"></script>
+    <script src="engine\collisions.js"></script>
     <script src="penguins\penguinlevel.js"></script>
     <script src="penguins\penguinobjects.js"></script>
     <script src="penguins\main.js"></script>
