objects turn according to velocity

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <h2>Fish eaten: <span class="fishcounter" id="fishcounter">0</span></h2>
     <div class="gamebox">
         <ul class="statlist">
@@ -30,8 +30,8 @@
             <div class="pausemenu">
                 <h1 id="menuline1">Penguins!</h1>
                 <h2 id="menuline2">use WASD to hunt tasty fish!</h3>
-                <!-- <h3 class="gamepaused">Game Paused</h3> -->
-                <button class="pausebutton">Start</button>
+                    <!-- <h3 class="gamepaused">Game Paused</h3> -->
+                    <button class="pausebutton">Start</button>
 
             </div>
             <canvas width="800" height="600">
@@ -51,11 +51,12 @@
 
     <script src="engine\gameObjects.js"></script>
     <script src="engine\level.js"></script>
-    <script src="engine\main.js"></script>
     <script src="engine\collisions.js"></script>
     <script src="penguins\penguinlevel.js"></script>
     <script src="penguins\penguinobjects.js"></script>
-    <script src="penguins\main.js"></script>
+    <script src="penguins\penguinmain.js"></script>
+    <script src="engine\main.js"></script>
+
 </body>
 
 </html>
